vuelta paa atras al contexto previo sin copias locacles .

--- a/BlazorSeguridad2026/BlazorSeguridad2026.Seguridad/Cultures/CultureSelector.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026.Seguridad/Cultures/CultureSelector.razor
@@ -65,8 +65,8 @@
         {
             Navigation.NavigateTo($"Culture/Set?culture={cultureEscaped}&redirectUri={uriEscaped}", forceLoad: true);
 
-            await ContextProvider.SetCultureName(_culture.Name);
-            await ContextProvider.UpdateEstadoContext();
+            await ContextProvider.SetCultureNameAsync(_culture.Name);
+            //await ContextProvider.SetAppStateAsync();
         }
     }
 }
