--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/Counter.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/Counter.razor
@@ -27,7 +27,7 @@ servidor:@estadoServidor
 
         // 4. Persistir de nuevo en el contexto
         ContextProvider.SetClaveValor(ClavesEstado.PaginaCliente, "COUNTER=" + currentCount.ToString());
-        await ContextProvider.UpdateEstadoContext();
+        await ContextProvider.SetAppStateAsync();
     }
 
 
@@ -40,7 +40,7 @@ servidor:@estadoServidor
     private bool _isInitializing;
     private string estadoCliente = "";
     private string estadoServidor;
-    IContextProvider? localContext;
+  
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
@@ -54,13 +54,13 @@ servidor:@estadoServidor
         ContextProvider.OnContextChanged += HandleContextChanged;
 
         // 2. Inicializar desde localStorage (JS interop seguro aquí)
-        localContext = await ContextProvider.CreateReadAll(); 
+        await ContextProvider.ReadContextAync(); 
 
         // 3. Leer estado actual
         estadoServidor = ContextProvider.GetValor(ClavesEstado.PaginaServidor) ?? "Ninguno";
 
 
-        estadoCliente = localContext.GetValor(ClavesEstado.PaginaCliente);
+        estadoCliente = ContextProvider.GetValor(ClavesEstado.PaginaCliente);
 
         _initialized = true;
         _isInitializing = false;
@@ -72,8 +72,8 @@ servidor:@estadoServidor
     private void HandleContextChanged()
     {
         // 6. Reaccionar a cambios posteriores de contexto
-        estadoCliente = localContext.GetValor(ClavesEstado.PaginaCliente);
-        estadoServidor = localContext.GetValor(ClavesEstado.PaginaServidor);
+        estadoCliente = ContextProvider.GetValor(ClavesEstado.PaginaCliente);
+        estadoServidor = ContextProvider.GetValor(ClavesEstado.PaginaServidor);
         InvokeAsync(StateHasChanged);
     }
 
