como antes de todo el lio ... parece que bien ??

--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Account/Pages/Login.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Account/Pages/Login.razor
@@ -188,7 +188,7 @@
         var token = TokenService.GenerateToken(userClaims);
 
         // guardar token y limpiar estado en tu ContextProvider para toda la app
-        await ContextProvider.UpdateContextFromToken(token);
+        await ContextProvider.SetFromTokenApiAsync(token);
         
 
         Logger.LogInformation("User logged in.");
