--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Layout/NavMenu.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Layout/NavMenu.razor
@@ -84,7 +84,7 @@
 </AuthorizeView>
 
 
-@* <CultureSelector></CultureSelector> *@
+ <CultureSelector></CultureSelector> 
 
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="nav flex-column">
