--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/DetalleUsuario.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/DetalleUsuario.razor
@@ -117,7 +117,10 @@
 
     private void OnContextChangedProxy() => _ = HandleContextChangedAsync();
 
-
+    protected override async Task OnInitializedAsync()
+    {
+        
+    }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
@@ -130,7 +133,7 @@
         ContextProvider.OnContextChanged += OnContextChangedProxy;
 
         // 2. Inicializar desde localStorage (JS interop seguro aquí)
-        await ContextProvider.ReadAllContext(true);
+        await ContextProvider.ReadAllContext(false);
 
         // 3. Leer estado actual
         estadoCliente = ContextProvider.GetValor(ClavesEstado.PaginaCliente) ?? "Ninguno";
