--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/LoginToken.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/LoginToken.razor
@@ -40,11 +40,13 @@ else
         Http = HttpFactory.CreateClient();
     }
 
+
+
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         if (!firstRender || _initialized)
             return;
-
+        await ContextProvider.ReadAllContext(true);
         // Si faltan datos, redirige directamente
         if (string.IsNullOrWhiteSpace(email) || string.IsNullOrWhiteSpace(password) || string.IsNullOrWhiteSpace(UrlApi))
         {
