TODO FUNCIONA BIEN ..SALVO QUE NO PUEDO CAMBIAR DE CULTURA EN UNA PAGINA CLIENTE .. TENGO QUE DESACTIVAR ESA OPCION EN EL CLIENTE

--- a/BlazorSeguridad2026/BlazorSeguridad2026.Seguridad/Cultures/CultureSelector.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026.Seguridad/Cultures/CultureSelector.razor
@@ -60,9 +60,9 @@
         if (ContextProvider.IsValid())
         {
             Navigation.NavigateTo($"Culture/Set?culture={cultureEscaped}&redirectUri={uriEscaped}", forceLoad: true);
-            await ContextProvider.ReadAllContext(true);
+            //await ContextProvider.ReadAllContext(true);
             await ContextProvider.SetCultureName(_culture.Name);
-            await ContextProvider.UpdateEstadoContext();
+            //await ContextProvider.UpdateEstadoContext();
         }
     }
 }
